# BiOrbit_data

./: .env.example  .gitignore  Dockerfile  README.md  deforestation_tend.py  download_sat_img.py  get-poetry.py  get_token.py  img_prepare.py  main.py  pyproject.toml  send_ipfs_data.py  send_web3s_data.py  test.py  test_deforestation_tend.py  test_prepare_img.py  test_upload_data.py  test_upload_data_web3.py
img_data/: data.json
json_files/: schema.json  type.json
temp_files/: final_img.json  nft.json
