[tool.poetry]
name = "biorbit-data"
version = "0.1.0"
description = "Code for satellite images transform and analyse"
authors = ["Oriojas <oscarriojas@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "biorbit_data"}]

[tool.poetry.dependencies]
python = "3.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
