[tool.poetry]
name = "biorbit-data"
version = "0.1.0"
description = "Code for satellite images transform and analyse"
authors = ["Oriojas <oscarriojas@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "biorbit_data"}]

[tool.poetry.dependencies]
python = "3.7.5"
opencv-python = "^4.7.0.68"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
numpy = "1.21"
requests = "^2.28.2"
oauthlib = "^3.2.2"
requests-oauthlib = "^1.3.1"
matplotlib = "3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
